plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '4.0.2'
    id 'com.jfrog.bintray' version '1.8.4'
    id 'org.beryx.runtime' version '1.0.0'
    id 'maven-publish'
    id 'idea'
}

group 'org.doddle-owl'
version = '1.0RC4'
mainClassName = 'org.doddle_owl.DODDLE_OWL'
sourceCompatibility = targetCompatibility = '11'

project.ext {
    artifactId = 'doddle-owl'
    defaultEncoding = 'UTF-8'
}

repositories {
    jcenter()
}

wrapper {
    gradleVersion = '5.0'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': 'org.doddle_owl.DODDLE_OWL'
    }
}

idea {
    module {
        inheritOutputDirs = true
        outputDir = compileJava.destinationDir
        testOutputDir = compileTestJava.destinationDir
    }
}

runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    modules = ['java.desktop', 'java.logging', 'java.xml', 'java.sql']
    javaHome = '/Library/Java/JavaVirtualMachines/jdk-11.0.1.jdk/Contents/Home'
    imageDir = file("$buildDir/doddle-owl-${version}")
    imageZip = file("$buildDir/doddle-owl-${version}.zip")
}

tasks.runtime.doLast {
    copy {
        from('./README.md')
        into("$buildDir/doddle-owl-${version}")
    }
    copy {
        from('./README.ja.md')
        into("$buildDir/doddle-owl-${version}")
    }
    copy {
        from('./LICENSE')
        into("$buildDir/doddle-owl-${version}")
    }
}

shadowJar {
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'org.doddle_owl.DODDLE_OWL'
    }
    archiveName = "doddle-owl.jar"
}

dependencies {
    compile 'org.xerial:sqlite-jdbc:3.25.2'
    compile 'commons-cli:commons-cli:1.4'
    compile 'org.apache.pdfbox:pdfbox:2.0.13'
    compile 'net.sf.extjwnl:extjwnl:2.0.0'
    compile 'net.sf.extjwnl:extjwnl-data-wn31:1.2'
    compile 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
    compile 'org.apache.poi:poi-ooxml:3.7'
    compile 'edu.stanford.nlp:stanford-corenlp:3.9.2'
    compile 'edu.stanford.nlp:stanford-corenlp:3.9.2:models'
    compile 'org.apache.jena:apache-jena-libs:3.9.0'
    compile 'org.slf4j:slf4j-simple:1.7.25'
    compile 'log4j:log4j:1.2.17'
    compileOnly 'org.projectlombok:lombok:1.18.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
}

publishing {
    publications {
        MyPublication(MavenPublication) {
            groupId = 'org.doddle-owl'
            artifactId = 'doddle-owl'
            version = '1.0RC4'

            from components.java
            pom {
                name = 'DODDLE-OWL'
                description = 'a Domain Ontology rapiD DeveLopment Environment - OWL extension'
                url = 'http://doddle-owl.org/'
                licenses {
                    license {
                        name = 'GNU GENERAL PUBLIC LICENSE, Version 3'
                        url = 'http://www.gnu.org/licenses/gpl-3.0.html'
                    }
                }
                developers {
                    developer {
                        id = 't-morita'
                        name = 'Takeshi Morita'
                        email = 't_morita@ae.keio.ac.jp'
                    }
                }
            }
        }
    }
}

def siteUrl = 'https://doddle-owl.org/'
def githubUrl = 'https://github.com/doddle-owl/doddle-owl'
bintray {
    user = project.getProperty('bintray_user')
    key = project.getProperty('bintray_api_key')
    publications = ['MyPublication']
    override = true
    pkg {
        repo = 'maven'
        name = project.group + ':' + project.ext.artifactId
        userOrg = 'doddle-owl'
        licenses = ['GPL']
        websiteUrl = siteUrl
        vcsUrl = githubUrl + '.git'
        issueTrackerUrl = githubUrl + '/issues'
        version {
            name = project.version
        }
    }
}
